--- a/02vitecreate/index.html
+++ b/02vitecreate/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="root"></div>
+    <h1>this is react page</h1>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
