react changes msg

--- a/02vitecreate/index.html
+++ b/02vitecreate/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <h1>this is react page</h1>
+    <h>this is react page</h>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
